禁止页面滑动

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,7 +1,6 @@
 <ion-view view-title="Dashboard">
-  <ion-content>
-<!-- <button class="stop" ng-click='stop()'>{{btn_txt}}</button>
- -->
+  <ion-content scroll='false'>
+    <button class="stop" ng-click='stop()'>{{btn_txt}}</button>
     <div id="mylegend"></div>
   </ion-content>
 </ion-view>
