--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,7 +1,8 @@
 <ion-view view-title="Dashboard">
   <ion-content scroll='false'>
     <ion-list>
-      <ion-item class="text-center"><a href="#/image">1.加载图片</a></ion-item>
+      <ion-item class="text-center"><a href="#/image"><button class="button">1.加载图片</button></a></ion-item>
+      <ion-item class="text-center"><a href="#/image2"><button class="button">2.加载图片2</button></a></ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
