--- a/www/templates/draw.html
+++ b/www/templates/draw.html
@@ -1,6 +1,6 @@
-<ion-view view-title="加载图片" cache-view="false">
+<ion-view view-title="绘图" cache-view="false">
   <ion-content scroll='false'>
-    <div id="image"></div>
+    <div id="draw"></div>
     <button class="button" ng-click='goToIndex()'>返回</button>
   </ion-content>
 </ion-view>
