--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -2,7 +2,8 @@
   <ion-content scroll='false'>
     <ion-list>
       <ion-item class="text-center"><a href="#/image"><button class="button">1.加载图片</button></a></ion-item>
-      <ion-item class="text-center"><a href="#/image2"><button class="button">2.加载图片2</button></a></ion-item>
+      <ion-item class="text-center"><a href="#/draw"><button class="button">2.绘图</button></a></ion-item>
+      <ion-item class="text-center"><a href="#/drawTriangles"><button class="button">3.图片扭曲</button></a></ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
