--- a/www/templates/animation.html
+++ b/www/templates/animation.html
@@ -1,6 +1,6 @@
-<ion-view view-title="图片扭曲" cache-view="false">
+<ion-view view-title="动画" cache-view="false">
   <ion-content scroll='false'>
-    <div id="drawTriangles"></div>
+    <div id="animation"></div>
     <button class="button" ng-click='goToIndex()'>返回</button>
   </ion-content>
 </ion-view>
