--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -5,6 +5,7 @@
       <ion-item class="text-center"><a href="#/draw"><button class="button">2.绘图</button></a></ion-item>
       <ion-item class="text-center"><a href="#/drawTriangles"><button class="button">3.图片扭曲</button></a></ion-item>
       <ion-item class="text-center"><a href="#/animation"><button class="button">4.动画</button></a></ion-item>
+      <ion-item class="text-center"><a href="#/swiper"><button class="button">5.swiper</button></a></ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
