--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,13 @@ canvas{
   height:100vh;
   flex:1;
 }
+.control{
+  display: flex;
+  position: absolute;
+  p{
+    color:#000;
+  }
+}
 #p-image{
 
   .control{
