--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -6,9 +6,10 @@
       <ion-item class="text-center"><a href="#/drawTriangles"><button class="button">3.图片扭曲</button></a></ion-item>
       <ion-item class="text-center"><a href="#/animation"><button class="button">4.动画</button></a></ion-item>
       <ion-item class="text-center"><a href="#/swiper"><button class="button">5.swiper</button></a></ion-item>
-      <ion-item class="text-center"><a href="#/move"><button class="button">6.单指移动</button></a></ion-item>
+      <ion-item class="text-center"><a href="#/move"><button class="button">6.单指移动 双指缩放</button></a></ion-item>
       <ion-item class="text-center"><a href="#/drawingpad"><button class="button">7.画板</button></a></ion-item>
       <ion-item class="text-center"><a href="#/download"><button class="button">8.在线看pdf</button></a></ion-item>
+
     </ion-list>
   </ion-content>
 </ion-view>
