--- a/www/templates/drawingpad.html
+++ b/www/templates/drawingpad.html
@@ -1,5 +1,5 @@
 <ion-view view-title="画板" cache-view="false">
-  <ion-content scroll='false'>
+  <ion-content scroll='false' id="drawingPadPage">
     <div id="drawingpad"></div>
     <button class="button" ng-click='goToIndex()'>返回</button>
   </ion-content>
