--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,3 +21,6 @@ canvas {
   align-items: center; }
   #p-image .control .t-begin {
     color: red; }
+
+#drawingPadPage {
+  background: #4d4d4d; }
